# ruvector

./: .gcloudignore  .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: sync-rvf-examples.yml
crates/mcp-brain/: Cargo.toml  README.md
crates/mcp-brain-server/: Cargo.toml  Dockerfile  README.md  cloudbuild.yaml  deploy.sh
crates/mcp-brain-server/src/: aggregate.rs  auth.rs  cognitive.rs  drift.rs  embeddings.rs  gcs.rs  graph.rs  lib.rs  main.rs  midstream.rs  pipeline.rs  ranking.rs  rate_limit.rs  reputation.rs  routes.rs  store.rs  tests.rs  types.rs  verify.rs
crates/mcp-brain-server/static/: agent-guide.md  brain-manifest.json  index.html  origin.html  robots.txt  sitemap.xml
crates/mcp-brain/src/: client.rs  embed.rs  lib.rs  main.rs  pipeline.rs  server.rs  tools.rs  types.rs
crates/ruvector-gnn-node/npm/darwin-arm64/: ruvector-gnn.darwin-arm64.node
crates/ruvector-gnn-node/npm/darwin-x64/: ruvector-gnn.darwin-x64.node
crates/ruvector-gnn-node/npm/linux-arm64-gnu/: ruvector-gnn.linux-arm64-gnu.node
crates/ruvector-graph-transformer-node/npm/darwin-arm64/: ruvector-graph-transformer.darwin-x64.node
crates/ruvector-graph-transformer-node/npm/darwin-x64/: ruvector-graph-transformer.darwin-x64.node
crates/ruvector-graph-transformer-node/npm/linux-arm64-gnu/: ruvector-graph-transformer.linux-arm64-gnu.node
crates/ruvector-graph-transformer-node/npm/linux-arm64-musl/: ruvector-graph-transformer.linux-arm64-musl.node
crates/ruvector-graph-transformer-node/npm/linux-x64-gnu/: ruvector-graph-transformer.linux-x64-gnu.node
crates/ruvector-graph-transformer-node/npm/linux-x64-musl/: ruvector-graph-transformer.linux-x64-gnu.node
crates/ruvector-graph-transformer-wasm/pkg/: ruvector_graph_transformer_wasm_bg.wasm
crates/ruvector-postgres/: Dockerfile  Dockerfile.prebuilt
crates/ruvector-postgres/docker/: Dockerfile  docker-compose.yml
crates/ruvector-postgres/sql/: ruvector--0.3.0.sql
crates/ruvector-postgres/src/graph/: mod.rs  operators.rs
crates/ruvector-postgres/src/sona/: mod.rs  operators.rs
crates/ruvllm/src/bitnet/: mod.rs  rlm_embedder.rs
docs/adr/: ADR-058-hash-security-optimization.md  ADR-059-shared-brain-google-cloud.md  ADR-060-shared-brain-capabilities.md  ADR-061-reasoning-kernel-architecture.md  ADR-062-brainpedia-architecture.md  ADR-063-wasm-executable-nodes.md  ADR-064-pi-brain-infrastructure.md  ADR-065-npm-publishing-strategy.md  ADR-066-sse-mcp-transport.md  ADR-067-mcp-gate-permit-system.md  ADR-068-domain-expansion-transfer-learning.md  ADR-069-google-edge-network-deployment.md  ADR-070-npx-ruvector-unified-integration.md  ADR-071-npx-ruvector-ecosystem-gap-analysis.md  ADR-072-rvf-example-management-downloads.md  ADR-073-pi-platform-security-optimization.md  ADR-074-ruvllm-neural-embeddings.md  ADR-075-rvf-agi-stack-brain-integration.md  ADR-076-agi-capability-wiring-architecture.md  ADR-077-midstream-brain-integration.md  ADR-078-npx-ruvector-midstream-integration.md  ADR-079-sql-audit-script-hardening.md
examples/edge-net/relay/tests/: relay.test.js
examples/edge-net/src/: lib.rs
examples/edge-net/src/brain/: mod.rs
examples/edge-net/src/credits/: mod.rs
examples/edge-net/src/economics/: amm.rs  brain_rewards.rs  mod.rs  reputation.rs
examples/rvf/: manifest.json
scripts/: create-brainpedia.py  generate-rvf-manifest.py  seed-brain-all.py  seed-brain.rs  seed-specialized.py  setup-gcs-examples.sh  sql-audit-v3.sql  train-lora.py  vote-boost.py
(+7 files in other folders)
