[package]
name = "mcp-brain"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"
license = "MIT"
description = "MCP server for RuVector Shared Brain — share, search, and transfer learning across Claude Code sessions"
repository = "https://github.com/ruvnet/ruvector"
publish = false

[lib]

[[bin]]
name = "mcp-brain"
path = "src/main.rs"

[dependencies]
# MCP Protocol
tokio = { version = "1.41", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2.0"

# HTTP client for Cloud Run backend
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Crypto
sha3 = "0.10"

# Utilities
base64 = "0.22"
hex = "0.4"
regex-lite = "0.1"

# RuVector Cognitive Stack
sona = { package = "ruvector-sona", path = "../sona", features = ["serde-support"] }
